--- a/app/summarize/summarize.module.css
+++ b/app/summarize/summarize.module.css
@@ -8,6 +8,7 @@
   justify-content: space-between;
   padding: 2rem 1rem;
   min-width: 380px;
+  position: relative;
   /* border: 1px solid yellow; */
 }
 
