--- a/app/(home)/home.module.css
+++ b/app/(home)/home.module.css
@@ -107,13 +107,12 @@
   bottom: -10px;
   left: 50%;
   transform: translateX(-50%);
-  font-size: 1.5rem;
   color: var(--text-muted);
   font-weight: 400;
 }
 
 .howItWorks {
-  min-height: 70dvh;
+  min-height: 65dvh;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -121,6 +120,7 @@
   background: radial-gradient(var(--bg) 35%, var(--bg-dark), transparent);
   background-color: var(--bg-dark);
   padding: 4rem 2rem;
+  color: var(--text-muted);
 
   /* border: 1px solid salmon; */
 }
@@ -133,6 +133,8 @@
   max-width: 1500px;
   margin: 1rem auto;
   text-align: left;
+  font-size: 1.3rem;
+  line-height: 1.3;
 }
 
 .howItWorks li {
@@ -145,7 +147,6 @@
   border-top: 1px solid var(--highlight);
   padding: 1rem 1.5rem;
   border-radius: 0.5rem;
-  color: var(--text-muted);
   min-width: 350px;
 }
 
@@ -246,7 +247,7 @@
 
 @media only screen and (max-width: 450px) {
   .hero {
-    min-height: 80vh;
+    min-height: 70vh;
   }
 
   .heroText {
