--- a/app/(home)/home.module.css
+++ b/app/(home)/home.module.css
@@ -3,10 +3,10 @@
   color: var(--text);
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: 100dvh;
   width: 100%;
   justify-content: space-between;
-  overflow: hidden;
+  overflow: auto;
 
   /* border: 1px solid yellow; */
 }
