--- a/app/summarize/summarize.module.css
+++ b/app/summarize/summarize.module.css
@@ -3,12 +3,14 @@
   color: var(--text);
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
-  width: 100%;
+  height: 100dvh;
   justify-content: space-between;
   padding: 2rem 1rem;
-  min-width: 380px;
-  position: relative;
+
+  width: 100%;
+  overflow: auto;
+  /* min-width: 300px; */
+
   /* border: 1px solid yellow; */
 }
 
@@ -20,7 +22,6 @@
   align-items: center;
   gap: 1rem;
   padding: 1rem;
-  min-width: 380px;
 
   /* border: 1px solid green; */
 }
@@ -28,6 +29,7 @@
 .summaryForm input {
   max-width: 750px;
   margin-bottom: 0.5rem;
+  min-width: 300px;
 }
 
 .currentSummaryWrapper {
@@ -36,7 +38,7 @@
   justify-content: center;
   padding: 2rem 1rem;
 
-  min-width: 380px;
+  width: 100%;
 
   /* border: 1px solid whitesmoke; */
 }
@@ -49,7 +51,7 @@
   margin: 4rem auto 1rem auto;
   font-size: 0.9rem;
   font-weight: 400;
-  width: 200px;
+  max-width: 250px;
 }
 
 .sessionInfoWrapper > button {
