--- a/app/summarize/summarize.module.css
+++ b/app/summarize/summarize.module.css
@@ -1,5 +1,5 @@
 .page {
-  background-color: var(--bg);
+  background: radial-gradient(var(--bg-light), var(--bg) 20%, var(--bg-dark));
   color: var(--text);
   display: flex;
   flex-direction: column;
@@ -9,7 +9,6 @@
 
   width: 100%;
   overflow: auto;
-  /* min-width: 300px; */
 
   /* border: 1px solid yellow; */
 }
