--- a/app/(home)/home.module.css
+++ b/app/(home)/home.module.css
@@ -17,7 +17,7 @@
   position: relative;
   min-width: 350px;
   padding: 1rem;
-  background: linear-gradient(0deg, var(--bg) 70%);
+  background: var(--bg-dark);
   z-index: 20;
 }
 
@@ -27,7 +27,7 @@
   bottom: -50;
   left: 0;
   right: 0;
-  background: linear-gradient(var(--bg), rgba(10, 10, 10, 0.753), transparent);
+  background: linear-gradient(var(--bg-dark), var(--bg-light), transparent);
   height: 100px;
   filter: blur(5px);
   z-index: 1;
@@ -68,13 +68,9 @@
 }
 
 .hero {
-  display: flex;
   min-height: 60dvh;
   text-align: center;
-
-  justify-content: center;
-  align-items: center;
-  background: linear-gradient(var(--bg) 70%, var(--bg-dark));
+  background: linear-gradient(var(--bg-dark) 70%, var(--bg));
   border-radius: 0px;
   position: relative;
 
@@ -93,6 +89,11 @@
 
   gap: 0.25rem;
   /* border: 1px solid lightblue; */
+}
+
+.heroTextContainer h1 {
+  font-size: 3rem;
+  line-height: 1.3;
 }
 
 .heroAction {
@@ -152,7 +153,7 @@
   left: 0;
   right: 0;
   height: 150px;
-  background: linear-gradient(rgba(10, 10, 10, 0.964), transparent);
+  background: linear-gradient(var(--bg-light), transparent);
 }
 
 .howItWorks ol {
@@ -171,10 +172,10 @@
   min-height: 100%;
   display: flex;
   align-items: center;
-  background: linear-gradient(0deg, var(--bg) 70%, var(--bg-light));
-  box-shadow: 0 2px 2px var(--highlight);
-  border: 1px solid var(--border);
+  background: var(--gradient);
+  border: var(--border-card);
   border-top: 1px solid var(--highlight);
+  box-shadow: var(--shadow);
   padding: 1rem 1.5rem;
   border-radius: 0.5rem;
   min-width: 350px;
@@ -273,15 +274,25 @@
     flex: 1;
     padding: 0.5rem 1rem;
   }
+
+  .heroTextContainer {
+    margin-top: 2rem;
+    width: 100%;
+  }
+
+  .heroTextContainer h1 {
+    font-size: 2.5rem;
+  }
+
+  .heroTextContainer h5 {
+    width: 75%;
+    margin: auto;
+  }
 }
 
 @media only screen and (max-width: 450px) {
   .hero {
     min-height: 70vh;
-  }
-
-  .heroTextContainer {
-    padding: 0.5rem;
   }
 
   .howItWorks li {
@@ -299,13 +310,13 @@
   position: absolute;
   background: linear-gradient(
       transparent 49%,
-      rgba(35, 35, 35, 0.864) 50%,
+      var(--grid-design) 50%,
       transparent 51%
     ),
     linear-gradient(
       90deg,
       transparent 49%,
-      rgba(35, 35, 35, 0.864) 50%,
+      var(--grid-design) 50%,
       transparent 51%
     );
   background-size: 100px 100px;
@@ -321,7 +332,7 @@
   bottom: -10;
   left: 0;
   right: 0;
-  background: linear-gradient(0deg, rgba(10, 10, 10, 0.964), transparent);
+  background: linear-gradient(0deg, var(--bg-light), transparent);
   height: 100px;
   filter: blur(5px);
 }
